[package]
name    = "helium-tracker-feather"
version = "0.1.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[dependencies]
cortex-m = {version = "0.6.0", features = ["const-fn"] }
longfi-device = { git = "ssh://git@github.com/helium/longfi-device-rs.git", branch = "lthiery/sx126x" }
embedded-hal = { version = "0.2.3", features = ["unproven"] }
nb = "0.1.2"

[dependencies.stm32l0xx-hal]
git                     = "https://github.com/lthiery/stm32l0xx-hal.git"
features                = ["stm32l0x2","rt"]
branch                  = "enable-spi2"


[dev-dependencies]
cortex-m    = "0.6.1"
cortex-m-rt = "0.6.10"
nb          = "0.1.2"
panic-halt  = "0.2.0"
usb-device  = "0.2.3"
usbd-serial = "0.1.0"

[dev-dependencies.stm32-usbd]
version  = "0.4.0"
features = ["stm32l0x2xx"]


[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = "s"