[package]
name    = "helium-tracker-feather"
version = "0.1.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.1"
longfi-device = { git = "https://github.com/helium/longfi-device-rs.git", branch = "master" }
embedded-hal = "0.2.3"
nb = "0.1.2"

[dependencies.stm32l0xx-hal]
version  = "0.5.0"
features = ["stm32l0x2", "rt"]


[dev-dependencies]
cortex-m    = "0.6.1"
cortex-m-rt = "0.6.10"
nb          = "0.1.2"
panic-halt  = "0.2.0"
usb-device  = "0.2.3"
usbd-serial = "0.1.0"
cortex-m-rtfm = "0.5.1"
stm32-usbd  = "0.5.0"

[dev-dependencies.stm32l0xx-hal]
version  = "0.5.0"
features = ["stm32-usbd"]

[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = "s"

# Opt 1 is needed to build a debug under 192k
[profile.dev]
opt-level = 1
